# knowledge-discovery

./: .gitignore  README.md  phone data - mlp.ipynb  preprocess.py  pyproject.toml
cephas/classifier/: preprocess.py  readme.txt  requirements.txt
chronic-kidney-disease/: README.txt  corr.txt  main.py
datasets/: phone-data.csv
feature-selection/: README.txt  feature-selection.py
main/phone-data/: phone data - mlp.ipynb  phone-data.csv
main/risk-data/: classifier.ipynb  preprocess.py  preprocessed.csv
phone-data/: preprocess.py  preprocessed.csv
phone-data/knn/: phone data - knn.ipynb
phone-data/mlp/: phone data - mlp.ipynb
risk-data/knn/: classifier.ipynb  knn.ipynb
risk-data/mlp/: .gitignore  mlp.ipynb  mlp.py  readme.txt
risk-data/mlp/datasets/: processed_risk_data.csv  risk_data.csv
risk-data/naive-bayes/: naive-bayes.ipynb
